--- a/site/templates/twig/code-tables/min/iwhm/list.twig
+++ b/site/templates/twig/code-tables/min/iwhm/list.twig
@@ -29,13 +29,19 @@
 			</div>
 			<div class="col-sm-3 text-center">
 				{% if page.is_print() == false %}
-					<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm">
-						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-					</a>
-					&nbsp;
-					<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
-						<i class="fa fa-trash" aria-hidden="true"></i> Delete
-					</a>
+					{% if manager.recordlocker.isLocked(code.code) == false or manager.recordlocker.isLockedByUser(code.code) %}
+						<a href="{{ page.codeEditUrl(code.code) }}" class="btn btn-warning btn-sm">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</a>
+						&nbsp;
+						<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger btn-sm delete_button">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
+					{% else %}
+						<span class="badge badge-secondary">
+							<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ manager.recordlocker.getLockingUser(code.code) }}
+						</span>
+					{% endif %}
 				{% endif %}
 			</div>
 		</div>
