--- a/site/templates/twig/code-tables/min/iwhm/edit/form/whse.twig
+++ b/site/templates/twig/code-tables/min/iwhm/edit/form/whse.twig
@@ -93,6 +93,7 @@
 		<label for="receivebinid">Receive Bin</label>
 	</div>
 	<div class="col-sm-3">
+		{{ warehouse.receivebintype }}
 		{% include 'util/bootstrap/form/select-simple.twig' with {
 				'select': {
 					'name': 'consignment',
