REFACTOR: use printReceivingLotserialUrl for lot

--- a/site/templates/twig/warehouse/inventory/receiving/ugm/po-items.twig
+++ b/site/templates/twig/warehouse/inventory/receiving/ugm/po-items.twig
@@ -83,7 +83,7 @@
 									<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 								</a>
 								&nbsp; &nbsp;
-								<a href="{{ page.printReceivingLineUrl(item) }}" class="btn btn-info btn-sm">
+								<a href="{{ page.printReceivingLotserialUrl(item, lot.lotserial) }}" class="btn btn-info btn-sm">
 									<i class="fa fa-print" aria-hidden="true"></i> Print
 								</a>
 							</div>
